[tool.poetry]
name = "fastytdownloader"
version = "0.1.0"
description = ""
authors = ["aturret <enturreopy@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
flask = "^3.1.2"
yt-dlp = "^2025.9.26"
gunicorn = "^23.0.0"
weasyprint = "^66.0"
pydub = "^0.25.1"
openai = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
