[tool.poetry]
name = "fastytdownloader"
version = "0.1.0"
description = ""
authors = ["aturret <enturreopy@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
flask = "^3.1.0"
yt-dlp = "^2026.1.31"
gunicorn = "^24.1.1"
weasyprint = "^68.0"
pydub = "^0.25.1"
openai = "^2.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
